--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </head>
 <body>
     <h1>Image Gallery</h1>
-    <img src="C:\Users\Artescern\Downloads\Github pages\img1.png" alt="Image 1">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img2.png" alt="Image 2">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img3.png" alt="Image 3">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img4.png" alt="Image 4">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img5.png" alt="Image 5">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img6.png" alt="Image 6">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img7.png" alt="Image 7">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img8.png" alt="Image 8">
-    <img src="C:\Users\Artescern\Downloads\Github pages\img9.png" alt="Image 9">
+    <img src="img1.png" alt="Image 1">
+    <img src="img2.png" alt="Image 2">
+    <img src="img3.png" alt="Image 3">
+    <img src="img4.png" alt="Image 4">
+    <img src="img5.png" alt="Image 5">
+    <img src="img6.png" alt="Image 6">
+    <img src="img7.png" alt="Image 7">
+    <img src="img8.png" alt="Image 8">
+    <img src="img9.png" alt="Image 9">
 </body>
 </html>
